--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,10 @@
     "react-helmet-async": "^2.0.4",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
-    "react-redux": "^9.0.4",
+     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "redux": "^5.0.1",
     "tailwind-scrollbar": "^3.0.5",
     "web-vitals": "^2.1.4"
